--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,16 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Time</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/landing.css">
 </head>
-<body>
-    <h4>Hello, World???</h4>
+<body class="landing">
+  <ui-view></ui-view>
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
     <script src="/scripts/app.js"></script>
+    <script src="/scripts/controllers/LandingCtrl.js"></script>
 </body>
 </html>
