--- a/app/index.html
+++ b/app/index.html
@@ -14,5 +14,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
     <script src="/scripts/app.js"></script>
     <script src="/scripts/controllers/LandingCtrl.js"></script>
+    <script src="/scripts/filters/timecode.js"></script>
 </body>
 </html>
